--- a/deconfig/redmi_ax6_immwrt.config
+++ b/deconfig/redmi_ax6_immwrt.config
@@ -10,7 +10,7 @@ CONFIG_TARGET_DEVICE_PACKAGES_qualcommax_ipq807x_DEVICE_redmi_ax6="ipq-wifi-redm
 CONFIG_TARGET_ROOTFS_INITRAMFS=n
 
 # Compile
-CONFIG_USE_APK=n
+CONFIG_USE_APK=y
 CONFIG_DEVEL=y
 CONFIG_CCACHE=y
 CONFIG_TARGET_OPTIONS=y
@@ -49,7 +49,7 @@ CONFIG_PACKAGE_kmod-tls=y
 CONFIG_PACKAGE_kmod-tun=y
 
 # Libraries
-CONFIG_PACKAGE_luci-lib-ipkg=y
+CONFIG_PACKAGE_luci-lib-ipkg=n
 CONFIG_PACKAGE_libopenssl-legacy=y
 
 # Package
