--- a/deconfig/redmi_ax6_immwrt.config
+++ b/deconfig/redmi_ax6_immwrt.config
@@ -53,7 +53,7 @@ CONFIG_PACKAGE_luci-lib-ipkg=n
 CONFIG_PACKAGE_libopenssl-legacy=y
 
 # Package
-CONFIG_PACKAGE_easytier=y
+#CONFIG_PACKAGE_easytier=y
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_fuse-utils=y
 CONFIG_PACKAGE_openssh-sftp-server=y
@@ -76,8 +76,8 @@ CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
 
 # Enable Luci App
 CONFIG_PACKAGE_luci-app-autoreboot=y
-CONFIG_PACKAGE_luci-app-easytier=y
-CONFIG_PACKAGE_luci-app-istorex=y
+#CONFIG_PACKAGE_luci-app-easytier=y
+#CONFIG_PACKAGE_luci-app-istorex=y
 CONFIG_PACKAGE_luci-app-lucky=y
 CONFIG_PACKAGE_luci-app-mosdns=y
 CONFIG_PACKAGE_luci-app-oaf=y
@@ -90,13 +90,19 @@ CONFIG_PACKAGE_luci-app-wol=y
 
 # Proxy
 #  Passwall
-CONFIG_PACKAGE_luci-app-passwall=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Server=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Client=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Client=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple_Obfs=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_SingBox=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin=n
+CONFIG_PACKAGE_luci-app-passwall=m
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy=m
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client=m
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Server=m
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Client=m
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Client=m
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple_Obfs=m
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_SingBox=m
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus=m
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin=m
+# Homeproxy (默认安装) - 使用 sing-box
+CONFIG_PACKAGE_luci-app-homeproxy=y
+
+# Passwall2 (可选安装) - 如果需要其他核心
+CONFIG_PACKAGE_luci-app-passwall2=m
+CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_Xray=m
