--- a/deconfig/jdcloud_ipq60xx_immwrt.config
+++ b/deconfig/jdcloud_ipq60xx_immwrt.config
@@ -14,7 +14,7 @@ CONFIG_TARGET_DEVICE_PACKAGES_qualcommax_ipq60xx_DEVICE_redmi_ax5-jdcloud="ipq-w
 CONFIG_TARGET_ROOTFS_INITRAMFS=n
 
 # Compile
-CONFIG_USE_APK=n
+CONFIG_USE_APK=y
 CONFIG_DEVEL=y
 CONFIG_CCACHE=y
 CONFIG_TARGET_OPTIONS=y
@@ -88,7 +88,7 @@ CONFIG_PACKAGE_kmod-dummy=y
 CONFIG_PACKAGE_kmod-veth=y
 
 # Libraries
-CONFIG_PACKAGE_luci-lib-ipkg=y
+CONFIG_PACKAGE_luci-lib-ipkg=n
 CONFIG_PACKAGE_libopenssl-legacy=y
 
 # Package
@@ -149,13 +149,19 @@ CONFIG_PACKAGE_luci-i18n-athena-led-zh-cn=m
 
 # Proxy
 #  Passwall
-CONFIG_PACKAGE_luci-app-passwall=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Server=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Client=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Client=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple_Obfs=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_SingBox=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin=n
+CONFIG_PACKAGE_luci-app-passwall=m
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy=m
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client=m
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Server=m
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Client=m
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Client=m
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple_Obfs=m
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_SingBox=m
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus=m
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin=m
+# Homeproxy (默认安装) - 使用 sing-box
+CONFIG_PACKAGE_luci-app-homeproxy=y
+
+# Passwall2 (可选安装) - 如果需要其他核心
+CONFIG_PACKAGE_luci-app-passwall2=m
+CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_Xray=m
