--- a/deconfig/jdcloud_ipq60xx_immwrt.config
+++ b/deconfig/jdcloud_ipq60xx_immwrt.config
@@ -14,7 +14,7 @@ CONFIG_TARGET_DEVICE_PACKAGES_qualcommax_ipq60xx_DEVICE_redmi_ax5-jdcloud="ipq-w
 CONFIG_TARGET_ROOTFS_INITRAMFS=n
 
 # Compile
-CONFIG_USE_APK=y
+CONFIG_USE_APK=n
 CONFIG_DEVEL=y
 CONFIG_CCACHE=y
 CONFIG_TARGET_OPTIONS=y
@@ -88,7 +88,7 @@ CONFIG_PACKAGE_kmod-dummy=y
 CONFIG_PACKAGE_kmod-veth=y
 
 # Libraries
-CONFIG_PACKAGE_luci-lib-ipkg=n
+CONFIG_PACKAGE_luci-lib-ipkg=y
 CONFIG_PACKAGE_libopenssl-legacy=y
 
 # Package
