--- a/.github/workflows/build_wrt.yml
+++ b/.github/workflows/build_wrt.yml
@@ -59,7 +59,12 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@v4
-
+        
+      - name: Fix script permissions
+        run: |
+          chmod +x build.sh
+          chmod +x pre_clone_action.sh
+          
       - name: Initialization Environment
         env:
           DEBIAN_FRONTEND: noninteractive
