--- a/.github/workflows/build_wrt.yml
+++ b/.github/workflows/build_wrt.yml
@@ -63,6 +63,7 @@ jobs:
       - name: Fix script permissions
         run: |
           chmod +x build.sh
+          chmod +x update.sh
           chmod +x pre_clone_action.sh
           
       - name: Initialization Environment
