--- a/deconfig/redmi_ax6_immwrt.config
+++ b/deconfig/redmi_ax6_immwrt.config
@@ -52,6 +52,7 @@ CONFIG_PACKAGE_kmod-tun=y
 # Libraries
 CONFIG_PACKAGE_luci-lib-ipkg=y
 CONFIG_PACKAGE_libopenssl-legacy=y
+CONFIG_PACKAGE_libbpf1=y
 
 # Package
 #CONFIG_PACKAGE_easytier=n
