--- a/deconfig/jdcloud_ipq60xx_immwrt.config
+++ b/deconfig/jdcloud_ipq60xx_immwrt.config
@@ -14,7 +14,7 @@ CONFIG_TARGET_DEVICE_PACKAGES_qualcommax_ipq60xx_DEVICE_jdcloud_re-cs-07="-ath11
 CONFIG_TARGET_ROOTFS_INITRAMFS=n
 
 # Compile
-CONFIG_USE_APK=n
+#CONFIG_USE_APK=n
 CONFIG_DEVEL=y
 CONFIG_CCACHE=y
 CONFIG_TARGET_OPTIONS=y
@@ -99,7 +99,7 @@ CONFIG_PACKAGE_kmod-usb2=y
 #CONFIG_PACKAGE_kmod-veth=y
 
 # Libraries
-CONFIG_PACKAGE_luci-lib-ipkg=y
+#CONFIG_PACKAGE_luci-lib-ipkg=y
 CONFIG_PACKAGE_libopenssl-legacy=y
 CONFIG_PACKAGE_libbpf1=y
 
