--- a/.github/workflows/release_wrt.yml
+++ b/.github/workflows/release_wrt.yml
@@ -136,6 +136,7 @@ jobs:
           echo "Kernel: ${{ env.KVER }}" >> release_body.txt
           echo "WIFI密码: 12345678" >> release_body.txt
           echo "LAN地址: 192.168.1.1" >> release_body.txt
+          echo "包管理: ${{ inputs.USE_APK == true && 'APK' || 'IPK' }}" >> release_body.txt
           echo "插件：" >> release_body.txt
           echo "$(grep -oP "luci-app(-[a-zA-Z0-9]{1,}){1,}" ./firmware/*.manifest | awk -F":" '{print $NF}')"  >> release_body.txt
 
