--- a/.github/workflows/release_wrt.yml
+++ b/.github/workflows/release_wrt.yml
@@ -153,6 +153,6 @@ jobs:
       - name: Release Firmware
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ env.BUILD_DATE }}_${{ inputs.model }}
+          tag_name: ${{ env.BUILD_DATE }}_${{ inputs.model }}_${{ inputs.USE_APK == true && 'apk' || 'ipk' }}
           files: ./firmware/*.*
           body_path: ./release_body.txt
