--- a/.github/workflows/build_wrt.yml
+++ b/.github/workflows/build_wrt.yml
@@ -125,5 +125,5 @@ jobs:
       - name: Upload Firmware
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ env.BUILD_DATE }}_${{ inputs.model }}
+          name: ${{ env.BUILD_DATE }}_${{ inputs.model }}_${{ inputs.USE_APK == true && 'apk' || 'ipk' }}
           path: ./firmware/*.*
