--- a/deconfig/jdcloud_ipq60xx_immwrt.config
+++ b/deconfig/jdcloud_ipq60xx_immwrt.config
@@ -166,6 +166,9 @@ CONFIG_PACKAGE_ddns-scripts-digitalocean=y
 CONFIG_PACKAGE_ddns-scripts-cnkuai=y
 CONFIG_PACKAGE_ddns-scripts-cloudflare=y
 CONFIG_PACKAGE_bind-host=y
+CONFIG_PACKAGE_v2ray-geoip=m
+CONFIG_PACKAGE_v2ray-geosite=m
+
 
 # Proxy
 #  Passwall
