--- a/deconfig/redmi_ax6_immwrt.config
+++ b/deconfig/redmi_ax6_immwrt.config
@@ -106,6 +106,7 @@ CONFIG_PACKAGE_luci-app-mwan3=m
 CONFIG_PACKAGE_luci-app-wrtbwmon=m
 CONFIG_PACKAGE_luci-app-banip=m
 CONFIG_PACKAGE_luci-app-cifs-mount=m
+CONFIG_PACKAGE_luci-app-tailscale=y
 
 CONFIG_PACKAGE_ddns-scripts-dnspod=y
 CONFIG_PACKAGE_ddns-scripts_aliyun=y
