--- a/deconfig/redmi_ax6_immwrt.config
+++ b/deconfig/redmi_ax6_immwrt.config
@@ -23,6 +23,9 @@ CONFIG_GDB=n
 CONFIG_BUSYBOX_CUSTOM=y
 CONFIG_BUSYBOX_CONFIG_TELNET=y
 
+# Swap
+CONFIG_PACKAGE_zram-swap=y
+
 # NSS
 CONFIG_IPQ_MEM_PROFILE_256=y
 CONFIG_ATH11K_MEM_PROFILE_512M=y
