--- a/deconfig/redmi_ax6_immwrt.config
+++ b/deconfig/redmi_ax6_immwrt.config
@@ -51,7 +51,7 @@ CONFIG_PACKAGE_luci-proto-vpnc=m
 CONFIG_PACKAGE_kmod-netlink-diag=y
 CONFIG_PACKAGE_kmod-inet-diag=y
 CONFIG_PACKAGE_kmod-tls=y
-# CONFIG_PACKAGE_kmod-tun=y
+CONFIG_PACKAGE_kmod-tun=y
 
 # Libraries
 
