--- a/deconfig/redmi_ax6_immwrt.config
+++ b/deconfig/redmi_ax6_immwrt.config
@@ -136,6 +136,12 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_SingBox=n
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus=n
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin=n
 
+CONFIG_PACKAGE_luci-app-qbittorrent=n
+CONFIG_PACKAGE_qbittorrent=n
+CONFIG_PACKAGE_qt6base=n
+CONFIG_PACKAGE_qt6tools=n
+CONFIG_PACKAGE_rblibtorrent=n
+
 # Homeproxy (默认安装) - 使用 sing-box
 CONFIG_PACKAGE_luci-app-homeproxy=y
 
